@@ -8,7 +8,7 @@ use Net::SSLeay;
 eval "use Test::Exception;";
 
 SKIP: {
-    skip 'Need Test::Exception for the some tests', 3 if $@;
+    skip 'Need Test::Exception for the some tests', 5 if $@;
     lives_ok( sub { Net::SSLeay::randomize() }, 'randomizing' );
     lives_ok( sub { Net::SSLeay::load_error_strings() }, 'loading error strings' );
     lives_ok( sub { Net::SSLeay::SSLeay_add_ssl_algorithms() }, 'adding ssl algorithms' );
